<resources>
    <string name="app_name">Log My Day</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_fields">Defined Fields</string>
    <string name="title_activity_field_detail">Field Details</string>
    <string name="add_button_text">Add new</string>
    <string name="pref_allow_scrolling_days">Allow scrolling back</string>
    <string name="pref_allow_scrolling_days_summary">Allow scrolling back to previous days</string>
    <string name="pref_notification_title">Reminders</string>
    <string name="pref_title_send_notification">Remind me daily</string>
    <string name="pref_summary_send_notification">Remind me to fill my data sending a reminder at the specified time</string>
    <string name="title_activity_stats">Stats</string>
    <string name="main_activity_label">Daily Log</string>
    <string name="title_activity_help">Help and About</string>
    <string name="about_text">
        Developed by Gabriele Viglianisi. Please report any problem to vigliag@gmail.com. Source code available at https://github.com/vigliag/LogMyDay
        \nDisclaimer: this application is still in beta status, and as result, data losses might happen. Please use the export function often.
    </string>
    <string name="usage_text">
        This app allows you to associate some data and notes to each day. This data can then be exported in the csv format. Some statistics can be seen in the Stats page.
        \nAs an example you could define a Text Field "Diary", and a Value Field mood.
        \nI\'d advice keeping a low number of fields, with a limited range of values (eg. 0 to 5) if it\'s a rate.
    </string>
    <string name="help_text">
        The main page displays the data for a given day, with an editable field for every Field defined in the preferences.
        \nIf enabled in preferences, you can swipe back to previous days.
    </string>
</resources>
