<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".DayActivity">
    <item android:id="@+id/action_settings" android:title="@string/action_settings" android:icon="@android:drawable/ic_menu_preferences"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_stats" android:title="@string/title_activity_stats" android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_export" android:title="Export to json" android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/title_activity_help" android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
