<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ovh.vii.logmyday.activities.HelpActivity">

    <TextView android:text="@string/usage_text" android:layout_width="wrap_content"
        android:autoLink="all"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:paddingTop="10dp" />

    <TextView android:text="@string/help_text" android:layout_width="wrap_content"
        android:autoLink="all"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:paddingTop="10dp" />

    <TextView android:text="@string/about_text" android:layout_width="wrap_content"
        android:autoLink="all"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView4"
        android:paddingTop="10dp" />

</RelativeLayout>
